fix: Update candidates label to reflect accurate search results count

--- a/index.html
+++ b/index.html
@@ -591,13 +591,9 @@
 
     const renderCandidates = (results, reading) => {
       candidatesList.textContent = '';
+      candidatesLabel.textContent = `「${reading}」の検索結果 (${results.length}件):`;
 
-      const seen = new Set();
       for (const data of results) {
-        const ucs = data['対応するUCS'];
-        if (seen.has(ucs)) continue;
-        seen.add(ucs);
-
         const li = document.createElement('li');
         li.className = 'char-item';
         const displayChar = getDisplayChar(data);
@@ -607,7 +603,6 @@
         li.addEventListener('click', () => setInputAndUpdate(displayChar));
         candidatesList.appendChild(li);
       }
-      candidatesLabel.textContent = `「${reading}」の検索結果 (${seen.size}件):`;
     };
 
     const update = async () => {
